crates/nx-syntax/tests/fixtures/invalid/incomplete-expression.nx
// Incomplete - missing right-hand side
let <Button /> =
